fixed the banner display on safari moblie view

--- a/src/components/Banner/banner.module.scss
+++ b/src/components/Banner/banner.module.scss
@@ -79,6 +79,8 @@
         flex-direction: column;
         justify-content: space-around;
         
-        height: 20vh;
+        height: 27vh;
+
+        font-size:.5rem;
     }
 }
